.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:34:05 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
12:34:08 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
make: No se hace nada para 'all'.
12:56:12 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:00:35 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:02:30 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
../src/Info.c: In function ‘listClientesYContrator’:
../src/Info.c:80:7: warning: implicit declaration of function ‘prntf’; did you mean ‘printf’? [-Wimplicit-function-declaration]
   80 |       prntf("CUITINFORMADO DICE %d",cuitinformado);
      |       ^~~~~
      |       printf
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
/usr/bin/ld: ./src/Info.o: en la función `listClientesYContrator':
/media/usuario/5A7CEC697CEC40FD/Users/Usuario/Downloads/UTNFrA/Repositorios Clonados Compratido/Laboratorio 1/Parcial_1_Lab_I_2017/Debug/../src/Info.c:80: referencia a `prntf' sin definir
collect2: error: ld returned 1 exit status
make: *** [makefile:46: Parcial_1_Lab_I_2017] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
13:02:42 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:06:09 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:13:46 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
../src/Info.c: In function ‘listClientesYContrator’:
../src/Info.c:69:7: warning: unused variable ‘cuitinformado’ [-Wunused-variable]
   69 |   int cuitinformado;
      |       ^~~~~~~~~~~~~
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:15:45 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
../src/Info.c: In function ‘listClientesYContrator’:
../src/Info.c:69:7: warning: unused variable ‘cuitinformado’ [-Wunused-variable]
   69 |   int cuitinformado;
      |       ^~~~~~~~~~~~~
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:16:49 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
../src/Info.c: In function ‘listClientesYContrator’:
../src/Info.c:69:7: warning: unused variable ‘cuitinformado’ [-Wunused-variable]
   69 |   int cuitinformado;
      |       ^~~~~~~~~~~~~
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:17:56 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:21:40 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:26:21 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
../src/Info.c: In function ‘listClientesYContrator’:
../src/Info.c:76:48: error: ‘l’ undeclared (first use in this function)
   76 |     cuitinformado=strcmp(bufferCUIT, pClientes[l].cuit);
      |                                                ^
../src/Info.c:76:48: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:35: src/Info.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
13:27:30 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
13:29:22 **** Incremental Build of configuration Debug for project Parcial_1_Lab_I_2017 ****
make all 
Building file: ../src/Info.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Info.d" -MT"src/Info.o" -o "src/Info.o" "../src/Info.c"
Finished building: ../src/Info.c
 
Building target: Parcial_1_Lab_I_2017
Invoking: GCC C Linker
gcc  -o "Parcial_1_Lab_I_2017"  ./src/Contrataciones.o ./src/Info.o ./src/Menu.o ./src/Pantalla.o ./src/Parcial_1_Lab_I_2017.o ./src/Pedir.o   
Finished building target: Parcial_1_Lab_I_2017
 
